--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,11 @@
-name: Deploy to server
+name: Deploy to production
 on:
   push:
     branches:
       - main
 jobs:
   deploy:
+    name: Deploy to production
     runs-on: ubuntu-latest
     defaults:
       run:
