--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,13 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v4
 
+      - name: Build translations
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+      - run: npm install -g static-i18n
+      - run: static-i18n -l fi -i fi -i en www
+
       - name: Deploy
         uses: up9cloud/action-rsync@master
         env:
