Hugo + Yarn gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
-i18n/*
-/index.html
-/en/index.html
+# Hugo
+public/
+.hugo_build.lock
+resources/
+
+# Yarn ( npm )
+yarn.lock
+node_modules/
+
+# Directory used to link files from node_modules
+assets/node/
