--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "4.3.1",
     "jquery": "^3.7.1",
     "jquery.easing": "1.4.1",
+    "masonry-layout": "^4.2.2",
     "popper.js": "1.16.1"
   }
 }
