--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,15 @@
 baseURL = 'https://jyvasmetro.fi'
 languageCode = 'fi-fi'
 title = 'Jyväsmetro 2025'
+
 defaultContentLanguage = 'fi'
+[languages]
+  [languages.fi]
+    languageName = 'Suomi'
+    weight = 1
+  [languages.en]
+    languageName = 'English'
+    weight = 2
 
 staticDir = ["static"]
 
